[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/VictoryScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/level_finished.mp3" type="AudioStream" id=2]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0.180392, 0.494118, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 381.0
margin_top = 64.0
margin_right = 484.0
margin_bottom = 78.0
rect_scale = Vector2( 5, 5 )
text = "Level complete!"

[node name="NextLevel" type="Button" parent="ColorRect"]
margin_left = 529.0
margin_top = 267.0
margin_right = 707.0
margin_bottom = 334.0
custom_colors/font_color = Color( 1, 0.968627, 0, 1 )
text = "Next level"

[node name="Menu" type="Button" parent="ColorRect"]
margin_left = 529.0
margin_top = 404.0
margin_right = 707.0
margin_bottom = 471.0
custom_colors/font_color = Color( 1, 0.952941, 0, 1 )
text = "Quit to menu"

[node name="ScoreText" type="Label" parent="ColorRect"]
margin_left = 536.0
margin_top = 181.0
margin_right = 576.0
margin_bottom = 195.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.956863, 0.960784, 0.0235294, 1 )
text = "Score:"

[node name="ScorePoints" type="Label" parent="ColorRect/ScoreText"]
margin_left = 44.0
margin_top = 0.666664
margin_right = 84.0
margin_bottom = 14.6667
custom_colors/font_color = Color( 0.956863, 0.960784, 0.0235294, 1 )
text = "0"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="ColorRect/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="ColorRect/Menu" to="." method="_on_Menu_pressed"]
